--- a/mi-cuenta.html
+++ b/mi-cuenta.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html lang="es"><body>
-    <main class="page-content">
-        <div class="container">
-            <div class="form-container mx-auto text-start">
-                <h1 class="page-title text-center">Mi Cuenta</h1>
-                <div id="account-details">
-                    <p class="text-center">Cargando datos...</p>
-                </div>
-                <hr>
-                <button id="logout-btn-details" class="btn-custom btn-logout w-100">Cerrar Sesión</button>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Cuenta - JG STORE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body id="page-mi-cuenta">
+    <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <div id="auth-section" class="navbar-auth"></div>
+            <a class="navbar-brand" href="index.html">✨ JG STORE</a>
+            <div class="navbar-nav">
+                <a class="nav-link" href="index.html">INICIO</a><a class="nav-link" href="productos.html">PRODUCTOS</a><a class="nav-link" href="rastreo.html">RASTREO</a><a class="nav-link" id="vender-link" href="beneficios-vendedor.html">VENDER</a>
             </div>
         </div>
+    </nav>
+    <main class="page-content">
+        <div class="container-jg text-start">
+            <h1 class="page-title text-center">Mi Cuenta</h1>
+            <div id="account-details">
+                <p class="text-center">Cargando información...</p>
+            </div>
+            <hr class="my-4">
+            <button id="logout-btn-details" class="btn btn-outline-jg btn-full">Cerrar Sesión</button>
+        </div>
     </main>
-    </body>
+    <script src="js/script.js"></script>
+</body>
 </html>
