Nuevas funcionalidades y cambio de diseño

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div id="auth-section" class="d-flex align-items-center">
             </div>
+            <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
       </div>
     </nav>
 
@@ -33,23 +34,25 @@
             <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active" style="background-image: url('https://placehold.co/1920x800/0d1117/58a6ff?text=Bienvenidos');">
+            <div class="carousel-item active" style="background-image: url('images/Banner1.png');">
                 <div class="carousel-caption d-none d-md-block text-start">
                     <h1 class="display-3 fw-bold text-uppercase">Nuevos Ingresos</h1>
                     <p class="lead">Descubre lo último en tecnología y gadgets para tu día a día.</p>
                     <a href="productos.html" class="btn btn-lg btn-custom">Ver Productos</a>
                 </div>
             </div>
-            <div class="carousel-item" style="background-image: url('https://placehold.co/1920x800/161b22/c9d1d9?text=Ofertas');">
-                 <div class="carousel-caption d-none d-md-block text-center">
-                    <h1 class="display-3 fw-bold text-uppercase">Ofertas Exclusivas</h1>
-                    <p class="lead">Hasta 30% de descuento en productos seleccionados. ¡No te lo pierdas!</p>
+            <div class="carousel-item" style="background-image: url('images/Banner2.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: scroll; min-height: 100vh;">
+            <div class="carousel-caption d-none d-md-block text-end" style= "padding: 20px; border-radius: 10px; right: 10%; bottom: 10%; top: auto; transform: none;">
+            <h2 class="fw-bold text-uppercase" style="font-size: 2.5rem;">Ofertas Exclusivas</h2>
+            <p class="lead" style="font-size: 1.2rem;">Hasta 30% de descuento en productos seleccionados. </p>
+                </div>
                 </div>
             </div>
-            <div class="carousel-item" style="background-image: url('https://placehold.co/1920x800/0d1117/238636?text=JG+Store');">
-                 <div class="carousel-caption d-none d-md-block text-end">
-                    <h1 class="display-3 fw-bold text-uppercase">Calidad y Confianza</h1>
-                    <p class="lead">Tu tienda de tecnología de confianza con envíos a toda Colombia.</p>
+            <div class="carousel-item" style="background-image: url('images/Banner3.png'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: scroll; min-height: 100vh;">
+            <div class="carousel-caption d-none d-md-block text-end" style= "padding: 20px; border-radius: 10px; right: 10%; bottom: 10%; top: auto; transform: none;">
+            <h2 class="fw-bold text-uppercase" style="font-size: 2.5rem;">Calidad y Confianza</h2>
+            <p class="lead" style="font-size: 1.2rem;">Tu tienda de tecnología de confianza con envíos a toda Colombia. </p>
+                </div>
                 </div>
             </div>
         </div>
