--- a/rastreo.html
+++ b/rastreo.html
@@ -21,22 +21,24 @@
             <li class="nav-item"><a class="nav-link" href="beneficios-vendedor.html">VENDER</a></li>
           </ul>
         </div>
-        <a href="login.html" class="user-btn me-3 d-none d-lg-block">JOHAN G</a>
-        <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
+        <div id="auth-section" class="d-flex align-items-center">
+            </div>
+            <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
       </div>
     </nav>
     
     <main class="page-content" id="rastreo">
-        <div class="container text-center">
-            <h1 class="page-title">Rastreo de Producto</h1>
-            <p class="lead mb-4">Ingresa tu número de guía para ver el estado de tu envío.</p>
+        <div class="rastreo-section">
+           <div class="titulo-container">  <!-- Nuevo contenedor para vertical -->
+           <h2 class="titulo-rastreo">Rastreo</h2>
+          </div>  
+            <input type="text" class="form-control" placeholder="Ingresa tu código de rastreo aquí" style="max-width: 300px;">
             <form action="rastreo-detalles.html" class="d-flex justify-content-center">
-                <input type="text" class="form-control w-50 me-2" placeholder="Ej: JG123456789CO" required>
-                <button type="submit" class="btn-custom">RASTREAR</button>
+            <button type="submit" class="btn-rastrear">RASTREAR</button>
             </form>
         </div>
     </main>
-
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
