--- a/carrito.html
+++ b/carrito.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito - JG STORE</title>
+    <title>Carrito de Compras - JG STORE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body id="page-carrito">
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">✨ JG STORE</a>
@@ -21,33 +19,50 @@
             <li class="nav-item"><a class="nav-link" href="beneficios-vendedor.html">VENDER</a></li>
           </ul>
         </div>
-        <a href="login.html" class="user-btn me-3 d-none d-lg-block">JOHAN G</a>
-        <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
+        <div id="auth-section" class="d-flex align-items-center">
+            </div>
+            <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
       </div>
     </nav>
-    
-<main class="page-content" id="carrito">
-    <div class="container">
-        <h1 class="page-title">Carrito de Compras</h1>
-        <div class="cart-container mx-auto">
-            <div id="cart-items-container"></div>
-            
-            <div id="cart-summary" style="display: none;">
-                <hr>
-                <div class="d-flex justify-content-between"><span>Subtotal</span><span id="cart-subtotal">$ 0</span></div>
-                <div class="d-flex justify-content-between"><span>Envío</span><span id="cart-shipping">$ 0</span></div>
-                <div class="d-flex justify-content-between fw-bold h5 mt-2"><span>Total</span><span id="cart-total">$ 0</span></div>
-                <a href="pago.html" class="btn-custom btn-pagar w-100 mt-3" id="checkout-button">IR A PAGAR</a>
-            </div>
-
-            <div id="empty-cart-message" class="text-center p-4" style="display: none;">
-                <h4>Tu carrito está vacío</h4>
-                <a href="productos.html" class="btn-custom">Explorar productos</a>
-            </div>
-        </div>
-    </div>
-</main>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <main class="page-content">
+        <div class="container-jg">
+            <h1 class="page-title">Tu Carrito de Compras</h1>
+            <div class="row g-5">
+                <!-- Columna de Items del Carrito -->
+                <div class="col-md-8">
+                    <ul class="list-group" id="cart-items-container">
+                        <!-- El JavaScript llenará esta lista -->
+                        <div class="text-center p-5"><div class="spinner-border" role="status"></div></div>
+                    </ul>
+                </div>
+                <!-- Columna del Resumen de la Compra -->
+                <div class="col-md-4">
+                    <div class="card bg-dark text-white border-secondary" id="cart-summary" style="display: none;">
+                        <div class="card-header">
+                            <h5 class="mb-0">Resumen de la Compra</h5>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item d-flex justify-content-between bg-transparent text-white border-secondary">
+                                    <span>Subtotal</span>
+                                    <strong id="cart-subtotal">$ 0</strong>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between bg-transparent text-white border-secondary">
+                                    <span>Envío</span>
+                                    <strong id="cart-shipping">$ 0</strong>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between bg-transparent text-white border-secondary fs-5">
+                                    <span>Total</span>
+                                    <strong id="cart-total">$ 0</strong>
+                                </li>
+                            </ul>
+                           <a id="proceed-to-payment" href="pago.html" class="btn btn-primary-jg btn-full mt-4">Proceder al Pago</a>
+     </div>  
+     </div>  
+     </div>  
+     </div> 
+     </div> 
+     </main>
+    <script src="js/script.js"></script>
 </body>
 </html>
