--- a/crear-cuenta.html
+++ b/crear-cuenta.html
@@ -3,25 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crear Cuenta - JG STORE</title>
-    <link rel="stylesheet" href="css/auth.css"> </head>
-<body id="page-crear-cuenta"> <div class="auth-container">
-        <div class="auth-box">
-            <a href="index.html" class="auth-logo">✨ JG STORE</a>
-            <h1 class="auth-title">Crear cuenta</h1>
-            
-            <form id="user-registration-form"> <div class="row">
-                    <input type="text" class="auth-input" id="nombre" name="nombre" placeholder="Nombre" required>
-                    <input type="text" class="auth-input" id="apellido" name="apellido" placeholder="Apellido" required>
-                </div>
-                <input type="email" class="auth-input" id="email" placeholder="Correo electrónico" required>
-                <input type="password" class="auth-input" id="pass" placeholder="Contraseña" required>
-                <button type="submit" class="auth-button">Crear Cuenta</button>
-            </form>
-            
-            <a href="login.html" class="auth-link">¿Ya tienes una cuenta? <strong>Inicia sesión</strong></a>
+    <title>Registro - JG STORE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body id="page-crear-cuenta">
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">✨ JG STORE</a>
+            <div class="navbar-center">
+                 <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">PRODUCTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="rastreo.html">RASTREO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="beneficios-vendedor.html">VENDER</a></li>
+                </ul>
+            </div>
+            <div id="auth-section" class="navbar-right d-flex align-items-center">
+                 <a href="login.html" class="btn btn-outline-jg">Iniciar Sesión</a>
+            </div>
         </div>
-    </div>
+    </nav>
+    <main class="page-content">
+        <div class="container-jg">
+            <h1 class="page-title">Registro de Usuario</h1>
+            <p class="page-subtitle">Crea tu cuenta para empezar a comprar.</p>
+            <form id="user-registration-form">
+                <div class="row">
+                    <div class="col-md-6"><input type="text" id="nombre" name="nombre" class="form-input-jg" placeholder="Nombre" required></div>
+                    <div class="col-md-6"><input type="text" id="apellido" name="apellido" class="form-input-jg" placeholder="Apellido" required></div>
+                </div>
+                <input type="email" id="email" name="email" class="form-input-jg" placeholder="Correo electrónico" required>
+                <input type="password" id="pass" name="pass" class="form-input-jg" placeholder="Contraseña" required>
+                <button type="submit" class="btn btn-primary-jg btn-full">Crear Cuenta</button>
+            </form>
+            <a href="login.html" class="form-link-jg">¿Ya tienes una cuenta? Inicia Sesión</a>
+        </div>
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
