--- a/login.html
+++ b/login.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - JG STORE</title>
-    <link rel="stylesheet" href="css/auth.css"> </head>
-<body id="page-login"> <div class="auth-container">
-        <div class="auth-box">
-            <a href="index.html" class="auth-logo">✨ JG STORE</a>
-            <h1 class="auth-title">Inicio de sesión</h1>
-            
-            <form id="login-form"> <input type="email" class="auth-input" id="email" placeholder="Correo electrónico" required>
-                <input type="password" class="auth-input" id="pass" placeholder="Contraseña" required>
-                <button type="submit" class="auth-button">Entrar</button>
-            </form>
-            
-            <a href="crear-cuenta.html" class="auth-link">¿Todavía no tienes una cuenta? <strong>Regístrate</strong></a>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body id="page-login">
+    <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">✨ JG STORE</a>
+            <div class="navbar-center">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">PRODUCTOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="rastreo.html">RASTREO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="beneficios-vendedor.html">VENDER</a></li>
+                </ul>
+            </div>
+            <div id="auth-section" class="navbar-right d-flex align-items-center">
+                 <a href="crear-cuenta.html" class="btn btn-primary-jg">Registrarse</a>
+            </div>
         </div>
-    </div>
+    </nav>
+    <main class="page-content">
+        <div class="container-jg">
+            <h1 class="page-title">Iniciar Sesión</h1>
+            <p class="page-subtitle">Ingresa a tu cuenta para continuar.</p>
+            <form id="login-form">
+                <input type="email" id="email" name="email" class="form-input-jg" placeholder="Correo electrónico" required>
+                <input type="password" id="pass" name="pass" class="form-input-jg" placeholder="Contraseña" required>
+                <button type="submit" class="btn btn-primary-jg btn-full">Entrar</button>
+            </form>
+            <a href="crear-cuenta.html" class="form-link-jg">¿No tienes una cuenta? Regístrate</a>
+        </div>
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
