--- a/mi-cuenta.html
+++ b/mi-cuenta.html
@@ -8,24 +8,27 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="page-mi-cuenta">
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <div id="auth-section" class="navbar-auth"></div>
-            <a class="navbar-brand" href="index.html">✨ JG STORE</a>
-            <div class="navbar-nav">
-                <a class="nav-link" href="index.html">INICIO</a><a class="nav-link" href="productos.html">PRODUCTOS</a><a class="nav-link" href="rastreo.html">RASTREO</a><a class="nav-link" id="vender-link" href="beneficios-vendedor.html">VENDER</a>
-            </div>
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">✨ JG STORE</a>
+        <div class="collapse navbar-collapse justify-content-center">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
+            <li class="nav-item"><a class="nav-link" href="productos.html">PRODUCTOS</a></li>
+            <li class="nav-item"><a class="nav-link" href="rastreo.html">RASTREO</a></li>
+            <li class="nav-item"><a class="nav-link" href="beneficios-vendedor.html">VENDER</a></li>
+          </ul>
         </div>
+        <div id="auth-section" class="d-flex align-items-center">
+            </div>
+            <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
+      </div>
     </nav>
     <main class="page-content">
         <div class="container-jg text-start">
             <h1 class="page-title text-center">Mi Cuenta</h1>
             <div id="account-details">
                 <p class="text-center">Cargando información...</p>
-            </div>
-            <hr class="my-4">
-            <button id="logout-btn-details" class="btn btn-outline-jg btn-full">Cerrar Sesión</button>
-        </div>
     </main>
     <script src="js/script.js"></script>
 </body>
