--- a/rastreo-detalles.html
+++ b/rastreo-detalles.html
@@ -20,8 +20,8 @@
             <li class="nav-item"><a class="nav-link" href="rastreo.html">RASTREO</a></li>
            <li class="nav-item"><a class="nav-link" href="beneficios-vendedor.html">VENDER</a></li>
           </ul>
-        </div>
-        <a href="login.html" class="user-btn me-3 d-none d-lg-block">JOHAN G</a>
+        </div><div id="auth-section" class="d-flex align-items-center"></div>
+        
         <a href="carrito.html" class="d-none d-lg-block cart-icon-wrapper"><i class="fas fa-shopping-cart cart-icon"></i></a>
       </div>
     </nav>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </main>
-
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
